# pp_superbowl_duckdb_streamlit

./: 00_read_superbowl.ipynb  README.md  app.py  pyproject.toml
data/: superbowl.duckdb
