[tool.poetry]
name = "nfl-sp"
version = "0.1.0"
description = ""
authors = ["sidneisantiago <sidnei.gs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.9.2"
pandas = "^2.2.0"
streamlit = "^1.30.0"
matplotlib = "^3.8.2"
plotly = "^5.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
